# $Id$

lib_LTLIBRARIES = libvgz.la

libvgz_la_LDFLAGS = -version-info 1:0:0

libvgz_la_SOURCES = \
	adler32.c \
	compress.c \
	crc32.c \
	crc32.h \
	deflate.c \
	deflate.h \
	gzclose.c \
	gzguts.h \
	gzlib.c \
	gzread.c \
	gzwrite.c \
	infback.c \
	inffast.c \
	inffast.h \
	inffixed.h \
	inflate.c \
	inflate.h \
	inftrees.c \
	inftrees.h \
	trees.c \
	trees.h \
	uncompr.c \
	zconf.h \
	vgz.h \
	zutil.c \
	zutil.h
