#

libvmod_directors_la_SOURCES = \
	vdir.c \
	vdir.h \
	fall_back.c \
	hash.c \
	random.c \
	round_robin.c \
	vmod_shard.c \
	shard_cfg.c \
	shard_cfg.h \
	shard_dir.c \
	shard_dir.h \
	shard_hash.c \
	shard_hash.h \
	shard_parse_vcc_enums.h \
	shard_parse_vcc_enums.c

# Use vmodtool.py generated automake boilerplate
include $(srcdir)/automake_boilerplate.am
